<resources>
    <string name="app_name">ELife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_life">E-Life</string>
    <string name="slogan">Listen to English anywhere</string>
    <string name="start">Start</string>
    <string name="topics">Topics</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="topic_name">Topic name</string>
    <string name="play_all">Play all</string>
    <string name="repeat_setting">Repeat setting</string>
    <string name="audio_title">Audio title</string>
    <string name="audio_duration">0:00</string>
    <string name="speed_default">1x</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="playback_speed">Playback speed</string>
    <string name="_0_5x">0.5x</string>
    <string name="_0_75x">0.75x</string>
    <string name="_1x_normal">1x (Normal)</string>
    <string name="_1_25x">1.25x</string>
    <string name="_1_5x">1.5x</string>
    <string name="example_10">10</string>
    <string name="maximum_number_of_repetitions">(The maximum number of repetitions is 20)</string>
    <string name="multiples_line_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </string>
    <string name="select_language">Select language:</string>
    <string name="apply">Apply</string>
    <string name="no_data">No Data</string>
    <string name="play_icon">PlayIcon</string>
    <string name="bookmark_border_icon">BookmarkBorderIcon</string>
    <string name="audio_details">Audio details</string>
</resources>