<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playbackSpeedDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
    android:background="@drawable/button_background"
    android:padding="@dimen/padding_20dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/playback_speed"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_txt_size"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/playbackSpeedRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle">

        <RadioButton
            style="@style/RadioButtonStyle"
            android:text="@string/_0_5x" />

        <RadioButton
            style="@style/RadioButtonStyle"
            android:text="@string/_0_75x" />

        <RadioButton
            style="@style/RadioCheckedStyle"
            android:text="@string/_1x_normal" />

        <RadioButton
            style="@style/RadioButtonStyle"
            android:text="@string/_1_25x" />

        <RadioButton
            style="@style/RadioButtonStyle"
            android:text="@string/_1_5x" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:background="@drawable/blue_btn_background"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/content_txt_size"
        app:layout_constraintEnd_toStartOf="@id/cancelBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playbackSpeedRG"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_size"
        android:background="@drawable/secondary_btn_background"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/content_txt_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/saveBtn"
        app:layout_constraintTop_toTopOf="@id/saveBtn"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>