<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AudiosListFragment">

        <include
            android:id="@+id/appBarFragment"
            layout="@layout/fragment_app_bar"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:background="@drawable/card_background"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="text"
            android:padding="@dimen/padding_20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/primaryColor"
            android:textSize="@dimen/content_txt_size"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/appBarFragment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/playAllBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:background="@drawable/card_background"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/play_all"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/content_txt_size"
            app:layout_constraintEnd_toStartOf="@id/repeatSettingBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchEdt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/repeatSettingBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:background="@drawable/card_background"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/repeat_setting"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/content_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/playAllBtn"
            app:layout_constraintTop_toBottomOf="@id/searchEdt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/audiosRcv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/playAllBtn"
            tools:listitem="@layout/audio_item_layout" />

        <ImageView
            android:id="@+id/goToTopImageView"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="11dp"
            android:background="@drawable/blue_btn_background"
            android:padding="@dimen/padding_10dp"
            android:src="@drawable/ic_arrow_upward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>